# bblab-server

./: .gitignore  .gitmodules  Makefile  README.md  bblab.dockerfile  bblab_inventory.md  bbtools.dockerfile  compose-template.env  docker-compose-bblab-dev.yml  docker-compose-bblab.yml  docker-compose-dev.yaml  docker-compose-ttc.yml  docker-compose.yaml  docker-compose.yml  server_config.md
alldata/: readme.txt
alldata/bblab_site/: README.md  manage.py  pyproject.toml  requirements-3.8.txt  requirements.txt  requirements27.txt  test_smoke.py
alldata/bblab_site/account/: apps.py  form.py  urls.py  views.py
alldata/bblab_site/bblab_site/: settings.py  settings.py.example  urls.py  views.py  wsgi.py
alldata/bblab_site/depend/libraries/: __init__.py
alldata/bblab_site/depend/libraries/deprecated/qvalue/: info.txt
alldata/bblab_site/depend/libraries/deprecated/qvalueold/: .qvalue.py.swp  info.txt  qvalue.py
alldata/bblab_site/depend/operations/: op_codon_by_codon.py  op_qvalue.py
alldata/bblab_site/depend/r_scripts/: qvalue_calculate.r
alldata/bblab_site/depend/util_scripts/: django_utils.py  filesys_utils.py  mailer.py  math_utils.py
alldata/bblab_site/docs/: db.md  env-var-and-database-connections.txt  general.txt  install_log.txt  tcr_dist_info.txt  usc_docs.txt
alldata/bblab_site/static/: account_style.css  auth_style.css  dna_script.js  pld_style.css  qc_style.css  tcr_dist.js  tcr_vis_style.css  usc_style.css  wo_style.css
alldata/bblab_site/static/PIex_css/: style.css
alldata/bblab_site/static/genome_css/: style.scss
alldata/bblab_site/templates/: account.html  account_base.html  auth_base.html  login.html  logout.html  tool_base.html
alldata/bblab_site/tools/: urls.py
alldata/bblab_site/tools/HIV_genome/: apps.py  index.html  views.py
alldata/bblab_site/tools/best_prob_HLA_imputation/: best_prob_HLA_imputation.py.bak  views.py
alldata/bblab_site/tools/blind_dating/: .gitignore  apps.py  blind_dating.py  config.R  index.html  models.py  readme.md  setup.py  views.py
alldata/bblab_site/tools/blind_dating/tests/: test_main.py
alldata/bblab_site/tools/codon_by_codon/: codon_by_codon.py  urls.py  views.py
alldata/bblab_site/tools/fasta_converter/: README.md  urls.py  views.py
alldata/bblab_site/tools/guava_layout/: guava_generate_files.py  views.py
alldata/bblab_site/tools/isoforms_plot/: README.md  apps.py  index.html  isoforms_inputs.py  isoforms_plot.py  pyproject.toml  run_isoforms.py  test_isoforms.csv  urls.py  views.py
alldata/bblab_site/tools/isoforms_plot/isoforms_plot/: __main__.py  compiler.py  exceptions.py  inputs.py  lexer.py  parser.py  plotter.py
alldata/bblab_site/tools/isoforms_plot/isoforms_plot_lib/: __main__.py  compiler.py  exceptions.py  parser.py
alldata/bblab_site/tools/isoforms_plot/templates/isoforms_plot/: index.html  results.html
alldata/bblab_site/tools/phage_i_expanded/: apps.py  index.html
alldata/bblab_site/tools/phage_i_expanded/scripts/: PHAGE.py
alldata/bblab_site/tools/proviral_landscape_plot/: README.md  apps.py  index.html  proviral_landscape_plot.py  run_proviral_landscape.py  test_proviral.csv  views.py
alldata/bblab_site/tools/quality_check/: apps.py  index.html  quality_check.py  views.py
alldata/bblab_site/tools/quality_check/migrations/: 0001_initial.py  0002_delete_tmp.py
alldata/bblab_site/tools/qvalue/: qvalue_generate_file.py  views.py
alldata/bblab_site/tools/sequencing_layout/: sequencing_generate_files.py  views.py
alldata/bblab_site/tools/tcr_distance/: tcr_distance.py  urls.py  views.py
alldata/bblab_site/tools/tcr_distance/tmp_dirs/tmp_34/: status
alldata/bblab_site/tools/tcr_visualizer/: to-delete
alldata/bblab_site/tools/text_to_columns/: data  index.html  text_to_columns.py  text_to_columns.py.bak  urls.py  views.py
alldata/bblab_site/tools/unique_sequence/: index.html  unique_sequence.py  views.py
alldata/bblab_site/tools/variable_function/: index.html  variable_function.py  views.py
conf/: apache2-hla_class.conf  apache2.conf  php.conf  tools-gld.conf  tools-hla.conf  tools-pld.conf
dockerfiles/: bbtools-bphi.dockerfile  bbtools-codon_by_codon.dockerfile  bbtools-fasta_converter.dockerfile  bbtools-guava_layout.dockerfile  bbtools-hiv_genome.dockerfile  bbtools-hla_class.dockerfile  bbtools-phage_i_expanded.dockerfile  bbtools-phylodating.dockerfile  bbtools-quality_check.dockerfile  bbtools-qvalue.dockerfile  bbtools-sequencing_layout.dockerfile  bbtools-tcr_distance.dockerfile  bbtools-tcr_visualizer.dockerfile  bbtools-text_to_columns.dockerfile  (+5 more)
(+128 files in other folders)
